# prose-doctor

./: .gitignore  README.md  batch_attention.py  build_human_dataset.py  compare_attention.py  generate_corpus.py  label_corpus.py  merge_and_balance.py  narrative_attention_proto.py  pyproject.toml  train_sensory_probe.py
arena/configs/: default.yaml  (+7 more)
corpus/: analysis_report.md  baselines_report.json  book1_report.json  classify_chunk_0.py  classify_chunk_1.py  classify_chunk_2.py  classify_chunk_3.py  classify_chunk_4.py  classify_chunk_5.py  debug2.py  debug3.py  debug_patterns.py  llm_report.json  manifest.json  needs_review.jsonl  review_chunk_0.jsonl  review_chunk_1.jsonl  review_chunk_2.jsonl  review_chunk_3.jsonl  review_chunk_4.jsonl  review_chunk_5.jsonl  reviewed_chunk_0.jsonl  reviewed_chunk_1.jsonl  reviewed_chunk_2.jsonl  reviewed_chunk_3.jsonl  reviewed_chunk_4.jsonl  reviewed_chunk_5.jsonl
docs/: experiments.md  lens-citations.md  lenses.md
experiments/: exp5_prompts.json  run_exp5.py  run_exp5_revise.py
refs/: BRYSBAERT_CITATION.txt  brysbaert_concreteness.csv
scripts/: analyze_novelist.py  build_human_corpus.py  compute_concreteness_direction.py  test_new_lenses.py
tests/: conftest.py  test_agent.py  test_agent_issues.py  test_agent_models.py  test_analyzers.py  test_arena_elo.py  test_arena_judge.py  test_arena_sampler.py  test_config.py  test_critique_config.py  test_lens_boyd_narrative_role.py  test_lens_concreteness.py  test_lens_dialogue_voice.py  test_lens_discourse_relations.py  test_lens_emotion_arc.py  test_lens_foregrounding.py  test_lens_fragment_classifier.py  test_lens_info_contour.py  test_lens_interface.py  test_lens_narrative_attention.py  test_lens_pacing.py  test_lens_perplexity.py  test_lens_psychic_distance.py  test_lens_referential_cohesion.py  test_lens_sensory.py  test_lens_situation_shifts.py  test_lens_slop_classifier.py  test_lens_uncertainty_reduction.py  test_patterns.py  test_providers.py  test_runner.py  test_text.py  test_validation.py
(+704 files in other folders)
