[project]
name = "prose-doctor"
version = "0.2.0"
description = "Prose analysis toolkit: pattern detection, vocabulary crutches, density budgets, and ML-powered scoring"
readme = "README.md"
authors = [
    { name = "Ben Sandbrook", email = "sandbrookvt@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "numpy>=1.26",
    "networkx>=3.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
agent = [
    "pydantic-ai>=1.60.0",
    "prose-doctor[ml]",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
prose-doctor = "prose_doctor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
